[package]
name = "miro-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true

s2n-quic = { version = "1.37", features = ["unstable-provider-datagram"] }
s2n-quic-h3 = { path = "../submodules/s2n-quic-h3" }
s2n-quic-core = "0.37"

http.workspace = true


tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true


# own dependencies
rand = "0.8"
bytes = "1.6"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
